2007-11-26  Alexander Larsson  <alexl@redhat.com>

	* Makefile.am (gioinclude_HEADERS):
	Remove trailing whitespace
	
2007-11-26  Alexander Larsson  <alexl@redhat.com>

	Merge gio-standalone into glib

2007-11-25  Christian Kellner  <gicmo@gnome.org>

	* gio/goutputstream.c:
	Fix small mistake in the docs.

2007-11-21  Christian Persch  <chpe@gnome.org>

	* gio/glocalfile.c: (g_local_file_trash):
	Convert filenames to UTF-8 for GError.
	Use g_mkdir_with_parent to create the Trash dir, and use mode 0700
	as per xdg base dir spec.

2007-11-21  Christian Persch  <chpe@gnome.org>

	* gio/gdesktopappinfo.c:
	Use that g_key_file_to_data cannot fail.
	Some misc cleanups.
	Use stock defines for the key file group and key names.
	Use bitfields.

2007-11-21  Alexander Larsson  <alexl@redhat.com>

        * gio/gfile.c:
        (copy_stream_with_progress):
	Make sure we do a final progress callback with
	the full total size.

2007-11-21  Alexander Larsson  <alexl@redhat.com>

        * gio/gfile.[ch]:
        Export g_file_copy_attributes
	Remove padding as its not needed for interfaces

2007-11-20  Alexander Larsson  <alexl@redhat.com>

        * gio/gfile.c:
        * gio/gioerror.h:
        * gio/glocalfile.c:
	Add G_IO_ERROR_WOULD_MERGE for
	copy/move dir on dir with overwrite.

2007-11-20  Alexander Larsson  <alexl@redhat.com>

        * gio/gfileinfo.h:
        * gio/glocalfileinfo.c:
	Add COPY_NAME (this is an optional
	non-modified utf8 version of the name) that
	can roundtrip.

2007-11-20  Alexander Larsson  <alexl@redhat.com>

        * gio/glocalfileenumerator.c:
	Report errors as GIOError, not GFileError

2007-11-16  Alexander Larsson  <alexl@redhat.com>

        * gio/glocalfileoutputstream.c:
        * gio/gwin32appinfo.c:
	Fix typos in strings.
	Patch from Luca Ferretti <elle.uca@libero.it>

2007-11-15  Alexander Larsson  <alexl@redhat.com>

	* configure.ac:
	Post release version bump

=== gio-standalone 0.1.2 ===
