@@ -1,0 +1,54 @@
+/* GIO - GLib Input, Output and Streaming Library
+ * 
+ * Copyright (C) 2006-2007 Red Hat, Inc.
+ *
+ * This library is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU Lesser General Public
+ * License as published by the Free Software Foundation; either
+ * version 2 of the License, or (at your option) any later version.
+ *
+ * This library is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * Lesser General Public License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General
+ * Public License along with this library; if not, write to the
+ * Free Software Foundation, Inc., 59 Temple Place, Suite 330,
+ * Boston, MA 02111-1307, USA.
+ *
+ * Author: Alexander Larsson <alexl@redhat.com>
+ */
+
+#ifndef __G_IO_H__
+#define __G_IO_H__
+
+#include <gio/gvfs.h>
+#include <gio/gfile.h>
+#include <gio/gvolumemonitor.h>
+#include <gio/gcontenttype.h>
+#include <gio/gappinfo.h>
+#include <gio/gicon.h>
+#include <gio/gfileicon.h>
+#include <gio/gloadableicon.h>
+#include <gio/gthemedicon.h>
+#include <gio/gseekable.h>
+#include <gio/gfilemonitor.h>
+#include <gio/gdirectorymonitor.h>
+#include <gio/gbufferedinputstream.h>
+#include <gio/gbufferedoutputstream.h>
+#include <gio/gdatainputstream.h>
+#include <gio/gdataoutputstream.h>
+#include <gio/gfilenamecompleter.h>
+#include <gio/gfilterinputstream.h>
+#include <gio/gfilteroutputstream.h>
+#include <gio/giomodule.h>
+#include <gio/gioscheduler.h>
+#include <gio/gmemoryinputstream.h>
+#include <gio/gmemoryoutputstream.h>
+#include <gio/gsimpleasyncresult.h>
+#include <gio/gsocketinputstream.h>
+#include <gio/gsocketoutputstream.h>
+#include <gio/gurifuncs.h>
+
+#endif /* __G_IO_H__ */
